# sentry_navigation

./: .gitignore  3floor.vgh  Dockerfile  README.md  build.sh  convert.py  frames.gv
.github/workflows/: CI.yml  build-CI.yaml  build.yml  ci.yml  docker-CI.yaml  docker.yml
cmd/: RMUC2024武汉工程BO1.txt  RMUC2024武汉工程BO2.txt  ros_topic_2024-05-24-091002.txt  ros_topic_2024-05-24-100455.txt  ros_topic_2024-05-24-103923.txt  ros_topic_2024-05-24-104637.txt  ros_topic_2024-05-24-104956.txt  ros_topic_2024-05-24-114112.txt  ros_topic_2024-05-24-114204.txt  ros_topic_2024-05-24-125930.txt  ros_topic_2024-05-24-131146.txt
log/: latest_build
src/: bridge.yaml
src/FAST_LIO/config/: mid360.yaml
src/FAST_LIO/launch/: mapping_mid360.launch  start2.launch
src/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/FAST_LIO/src/: laserMapping.cpp
src/LIO-Livox/: CMakeLists.txt  package.xml
src/LIO-Livox/launch/: mid360.launch  real_robot.launch  start2.launch
src/LIO-Livox/rviz_cfg/: lio.rviz
src/Point-LIO/: README.md
src/Point-LIO/config/: mid360.yaml
src/Point-LIO/launch/: mapping_mid360.launch
src/Point-LIO/src/: laserMapping.cpp  preprocess.cpp
src/auto_nav/include/: pid_position_follow copy.h  pid_position_follow.h
src/auto_nav/launch/: navi_simple_meca_car_pid.launch  pid_follow_planner.launch
src/auto_nav/map/: map.pgm  map.yaml
src/auto_nav/src/: pid_position_follow.cpp
src/fast_gicp/: CMakeLists.txt  package.xml
src/fast_gicp/data/: map.pcd
src/fast_gicp/include/: gicp.hpp
src/fast_gicp/launch/: gicp_loop.launch
src/fast_gicp/src/: gicp.cpp  pub.py  trans.cpp
src/faster-lio/config/: mid360.yaml
src/faster-lio/doc/: pose copy.txt  pose.txt
src/faster-lio/include/: imu_processing.hpp  laser_mapping.h  relocalization.hpp
src/faster-lio/launch/: mapping_mid360.launch  mapping_mid360_slam.launch
src/faster-lio/rviz_cfg/: loam_livox.rviz
src/faster-lio/src/: CMakeLists.txt  laser_mapping.cc  relocalization.cc
src/global_planner/: CMakeLists.txt  README.md  package.xml
src/global_planner/launch/: AStar_node.launch
src/global_planner/maps/: 3floor.pgm  3floor.yaml  map.pgm  map0429.pgm  map0509.yaml  map0530.yaml  map0702.yaml  map2023.pgm  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map728.pgm  map728.yaml  map_old.pgm
src/global_planner/params/: A_star_planner.yaml  rviz.rviz
src/global_planner/src/: plan_node.cpp  planner_core.cpp  publisher.cpp
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch_ROS1/: msg_MID360_c.launch  msg_MID360_p.launch
src/livox_ros_driver2/src/: lddc.cpp
src/move_base/move_base/: CMakeLists.txt
src/nav_bringup/: CMakeLists.txt  package.xml
src/nav_bringup/launch/: robot_state_publisher.launch  sentry_nav.launch  sentry_slam.launch
src/nav_bringup/rviz/: local.rviz
src/nav_bringup/test/: pub_pcd.cpp
src/nav_transporter/: CMakeLists.txt  package.xml
src/nav_transporter/config/: config.yaml  extrinsic.yaml  hardware_settings.yaml  params.yaml
src/nav_transporter/include/: can.hpp  can_comm_node.hpp  state_processing.hpp  usb.hpp  usb_comm_node.hpp
src/nav_transporter/launch/: transporter.launch
src/nav_transporter/sdk/: CMakeLists.txt
src/nav_transporter/sdk/include/: transporter_interface.hpp  usbcdc_transporter.hpp
src/nav_transporter/sdk/src/: usbcdc_transporter.cpp
src/nav_transporter/src/: can.cpp  can_comm_node.cpp  state_processing.cpp  usb_comm_node.cpp
src/pcd2pgm/launch/: run.launch
src/pcd2pgm/src/: pcd2pgm.cpp
src/planner/ obstacle_generater/: CMakeLists.txt  package.xml
src/planner/ obstacle_generater/launch/: obstacle_generater.launch
src/planner/ obstacle_generater/src/: obstacleGenerating.cpp
src/planner/local_planner/: CMakeLists.txt  package.xml
src/planner/obstacle_generater/: CMakeLists.txt  package.xml
src/planner/terrain_analysis/: CMakeLists.txt
src/planner/terrain_analysis_ext/: CMakeLists.txt
src/pointcloud_repub/: CMakeLists.txt  package.xml
src/pointcloud_repub/config/: extrinsic.yaml
src/pointcloud_repub/include/: pointcloud_repub.hpp
src/pointcloud_repub/launch/: pointcloud_repub.launch
src/pointcloud_repub/src/: pointcloud_repub.cpp  repub_node.cpp
src/read_pcd/: CMakeLists.txt  package.xml
src/read_pcd/src/: read_pcd.cpp
src/realsense-ros/realsense2_camera/: CMakeLists.txt
src/robot_localization-noetic-devel/params/: ekf_template.yaml
src/scan_to_map/include/: scan_to_map_location.h
src/scan_to_map/launch/: robot_localization_icp.launch  scan_to_map_location.launch
src/scan_to_map/param/: icp_params.yaml  robot_localization.yaml
src/scan_to_map/src/: scan_to_map_location.cpp
src/sentry_msgs/: CMakeLists.txt  package.xml
src/sentry_msgs/msg/: RecordInformation.msg  RefereeInformation.msg
src/sentry_srvs/: CMakeLists.txt  package.xml
src/sentry_srvs/srv/: BuyBullets.srv  NavGoal.srv  NavState.srv  NavStop.srv  NavTarget.srv
src/simple_meca_car/urdf/: waking_robot.xacro
src/vehicle_simulator/launch/: system_garage.launch  system_real_robot.launch
src/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/vehicle_simulator/world/: 2023_v_4_1.world
(+158 files in other folders)
